Mottatte opplysninger kan mangle
Tidligere var AvklarteVirksomheterService brukt i en kontekst hvor man forventet mottatte opplysninger